# lsif-clang-tmp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  config.sh
src/: CMakeLists.txt  LsifIndexAction.cpp  LsifIndexAction.h  LsifMain.cpp  LsifMerge.cpp  LsifMerge.h  LsifSerialization.cpp  LsifSerialization.h
src/lsif/: CMakeLists.txt  LsifMain.cpp  LsifSerialization.h
